--- a/Pages/MainWindow/MainWindow.xaml
+++ b/Pages/MainWindow/MainWindow.xaml
@@ -9,7 +9,7 @@
     <Grid Width="1280" Height="720">
         <Button Name="Manin_Btn" Content="Главная" HorizontalAlignment="Left" Margin="215,148,0,0" VerticalAlignment="Top" Height="35" Width="190" FontFamily="Arial"/>
         <Button Name="Category_Btn" Content="Категории" HorizontalAlignment="Left" Margin="433,148,0,0" VerticalAlignment="Top" Height="36" Width="190" FontFamily="Arial"/>
-        <Button Name ="Authorization_Btn" Content="Авторизация" HorizontalAlignment="Left" Margin="642,148,0,0" VerticalAlignment="Top" Height="36" Width="190" FontFamily="Arial"/>
+        <Button Name ="Authorization_Btn" Content="Авторизация" HorizontalAlignment="Left" Margin="642,148,0,0" VerticalAlignment="Top" Height="36" Width="190" FontFamily="Arial" Click="Authorization_Btn_Click"/>
         <Button Name="Info_Btn" Content="Об Организации" HorizontalAlignment="Left" Margin="865,148,0,0" VerticalAlignment="Top" Height="36" Width="190" FontFamily="Arial"/>
         <Image HorizontalAlignment="Center" Height="117" Margin="0,19,0,0" VerticalAlignment="Top" Width="194" Source="/i.png">
             <Image.OpacityMask>
