--- a/Pages/Register/RegisterPage.xaml
+++ b/Pages/Register/RegisterPage.xaml
@@ -1,12 +1,12 @@
-﻿<Page x:Class="Polaroid.Pages.Authorization.Authorization"
+﻿<Page x:Class="Polaroid.Pages.RegisterFolder.RegisterPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:Polaroid.Pages.Authorization"
+      xmlns:local="clr-namespace:Polaroid.Pages.RegisterFolder"
       mc:Ignorable="d" 
-      d:DesignHeight="720" d:DesignWidth="1280"
-      Title="Authorization" Background="AliceBlue">
+      d:DesignHeight="450" d:DesignWidth="800"
+      Title="RegisterPage" Background="MediumAquamarine">
 
     <Grid>
         
