--- a/Pages/AUZ/AUZPage.xaml
+++ b/Pages/AUZ/AUZPage.xaml
@@ -15,11 +15,11 @@
             </Image.OpacityMask>
         </Image>
         <Label Content="Логин" HorizontalAlignment="Left" Margin="458,177,0,0" VerticalAlignment="Top" FontSize="28"/>
-        <TextBox HorizontalAlignment="Left" Margin="451,224,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="378" Height="72.6" Background="Aqua"/>
+        <TextBox Name="TxbLogin" HorizontalAlignment="Left" Margin="442,224,0,0" Text="ss_mid" TextWrapping="Wrap" VerticalAlignment="Top" Width="378" Height="73" Background="Aqua" FontFamily="Arial" FontSize="58"/>
         <Label Content="Пароль" HorizontalAlignment="Left" Margin="458,324,0,0" VerticalAlignment="Top" FontSize="28"/>
-        <TextBox HorizontalAlignment="Left" Margin="451,371,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="378" Height="77" Background="Aqua"/>
+        <PasswordBox Name="PassBox" HorizontalAlignment="Center" Margin="0,371,0,0" VerticalAlignment="Top" Width="378" Height="74" Background="Aqua" Password="tinker" FontFamily="Arial" FontSize="58"/>
         <Label Content="Забыли пароль?" HorizontalAlignment="Left" Margin="726,453,0,0" VerticalAlignment="Top" Width="103"/>
-        <Button Content="Регистрация" HorizontalAlignment="Left" Margin="458,486,0,0" VerticalAlignment="Top" Width="152" Height="48"/>
-        <Button Content="Вход" HorizontalAlignment="Left" Margin="665,486,0,0" VerticalAlignment="Top" Width="152" Height="48"/>
+        <Button Name="Register_Btn" Content="Регистрация" HorizontalAlignment="Left" Margin="458,486,0,0" VerticalAlignment="Top" Width="152" Height="48" Click="Register_Btn_Click" ClickMode="Press"/>
+        <Button Name="Login_Btn" Content="Вход" HorizontalAlignment="Left" Margin="665,486,0,0" VerticalAlignment="Top" Width="152" Height="48" Click="Login_Btn_Click" ClickMode="Press"/>
     </Grid>
 </Page>
