--- a/Pages/GlavPage/Glavnaya.xaml
+++ b/Pages/GlavPage/Glavnaya.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Polaroid.Pages.GlavPage.Main"
+﻿<Page x:Class="Polaroid.Pages.GlavPage.Glavnaya"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,11 +6,11 @@
       xmlns:local="clr-namespace:Polaroid.Pages.GlavPage"
       mc:Ignorable="d" 
       d:DesignHeight="720" d:DesignWidth="1280"
-      Title="Main" Background="White">
+      Title="Main" Background="White" >
 
     <Grid>
         <Button Name="Manin_Btn" Content="Главная" HorizontalAlignment="Left" Margin="215,148,0,0" VerticalAlignment="Top" Height="35" Width="190" FontFamily="Arial"/>
-        <Button Name="Category_Btn" Content="Категории" HorizontalAlignment="Left" Margin="433,148,0,0" VerticalAlignment="Top" Height="36" Width="190" FontFamily="Arial"/>
+        <Button Name="Category_Btn" Content="Категории" HorizontalAlignment="Left" Margin="433,148,0,0" VerticalAlignment="Top" Height="36" Width="190" FontFamily="Arial" Click="Category_Btn_Click"/>
         <Button Name ="Authorization_Btn" Content="Авторизация" HorizontalAlignment="Left" Margin="642,148,0,0" VerticalAlignment="Top" Height="36" Width="190" FontFamily="Arial" Click="Authorization_Btn_Click"/>
         <Button Name="Info_Btn" Content="Об Организации" HorizontalAlignment="Left" Margin="865,148,0,0" VerticalAlignment="Top" Height="36" Width="190" FontFamily="Arial"/>
         <Image HorizontalAlignment="Center" Height="117" Margin="0,19,0,0" VerticalAlignment="Top" Width="194" Source="/i.png">
@@ -18,11 +18,15 @@
                 <ImageBrush ImageSource="/i.png"/>
             </Image.OpacityMask>
         </Image>
-        <Rectangle x:Name="ads" HorizontalAlignment="Center" Height="398" Stroke="Black" VerticalAlignment="Top" Width="940" Margin="0,282,0,0">
+        <Rectangle x:Name="ads" HorizontalAlignment="Center" Height="188" Stroke="Black" VerticalAlignment="Top" Width="940" Margin="0,282,0,0">
             <Rectangle.Fill>
                 <ImageBrush ImageSource="/ADS.png" Stretch="UniformToFill"/>
             </Rectangle.Fill>
         </Rectangle>
         <Rectangle HorizontalAlignment="Center" Height="50" Stroke="Black" VerticalAlignment="Top" Width="940" Margin="0,213,0,0"/>
+        <Rectangle HorizontalAlignment="Left" Height="189" Margin="239,486,0,0" Stroke="Black" VerticalAlignment="Top" Width="192"/>
+        <Rectangle HorizontalAlignment="Left" Height="188" Margin="452,486,0,0" Stroke="Black" VerticalAlignment="Top" Width="192"/>
+        <Rectangle HorizontalAlignment="Left" Height="188" Margin="665,486,0,0" Stroke="Black" VerticalAlignment="Top" Width="192"/>
+        <Rectangle HorizontalAlignment="Left" Height="188" Margin="881,486,0,0" Stroke="Black" VerticalAlignment="Top" Width="192"/>
     </Grid>
 </Page>
