--- a/Pages/AUZ/AUZPage.xaml
+++ b/Pages/AUZ/AUZPage.xaml
@@ -9,6 +9,10 @@
       Title="AUZPage" Background="White">
 
     <Grid>
+        <Button Name="Manin_Btn" Content="Главная" HorizontalAlignment="Left" Margin="216,130,0,0" VerticalAlignment="Top" Height="35" Width="190" FontFamily="Arial" Click="Manin_Btn_Click"/>
+        <Button Name="Category_Btn" Content="Категории" HorizontalAlignment="Left" Margin="434,130,0,0" VerticalAlignment="Top" Height="36" Width="190" FontFamily="Arial" Click="Category_Btn_Click"/>
+        <Button Name ="Authorization_Btn" Content="Авторизация" HorizontalAlignment="Left" Margin="643,130,0,0" VerticalAlignment="Top" Height="36" Width="190" FontFamily="Arial" Click="Authorization_Btn_Click"/>
+        <Button Name="Info_Btn" Content="Об Организации" HorizontalAlignment="Left" Margin="866,130,0,0" VerticalAlignment="Top" Height="36" Width="190" FontFamily="Arial" Click="Info_Btn_Click"/>
         <Image HorizontalAlignment="Center" Height="117" Margin="0,19,0,0" VerticalAlignment="Top" Width="194" Source="/i.png">
             <Image.OpacityMask>
                 <ImageBrush ImageSource="/i.png"/>
