--- a/Pages/Admin Main/AddItem.xaml
+++ b/Pages/Admin Main/AddItem.xaml
@@ -9,5 +9,10 @@
       Title="AddItem" Background="White">
 
     <Grid>
+        <TextBox HorizontalAlignment="Left" Margin="403,196,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="403" Height="30"/>
+        <TextBox HorizontalAlignment="Left" Margin="403,263,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="403" Height="31"/>
+        <TextBox HorizontalAlignment="Left" Margin="403,336,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="403" Height="30"/>
+        <TextBox HorizontalAlignment="Left" Margin="403,407,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="403" Height="30"/>
+        <TextBox HorizontalAlignment="Left" Margin="403,481,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="403" Height="30"/>
     </Grid>
 </Page>
