--- a/Pages/Admin Main/AdmMain.xaml
+++ b/Pages/Admin Main/AdmMain.xaml
@@ -6,17 +6,11 @@
       xmlns:local="clr-namespace:Polaroid.Pages.Admin_Main"
       mc:Ignorable="d" 
       d:DesignHeight="720" d:DesignWidth="1280"
-      Title="AdmMain" Background="Bisque">
+      Title="AdmMain" Background="White">
 
     <Grid>
-        <Image HorizontalAlignment="Center" Height="117" Margin="0,10,0,0" VerticalAlignment="Top" Width="194" Source="/i.png">
-            <Image.OpacityMask>
-                <ImageBrush ImageSource="/i.png"/>
-            </Image.OpacityMask>
-        </Image>
-        <Label Content="Панель Админа" Margin="416,174,416,438" FontSize="48" FontFamily="Arial Black"></Label>
-        <Button Name="Item_Btn" Content="Управление Товрами" HorizontalAlignment="Center" VerticalAlignment="Center" Height="78" Width="274" Click="Item_Btn_Click"/>
-        <Button Name="User_Btn" Content="Управление Пользователями" HorizontalAlignment="Center" Margin="0,441,0,0" VerticalAlignment="Top" Height="78" Width="274" Click="User_Btn_Click"/>
-        <Button Name="Back_Btn" Content="Выйти" HorizontalAlignment="Left" Margin="1113,32,0,0" VerticalAlignment="Top" Height="55" Width="137" Click="Back_Btn_Click"/>
+        <Label Content="Панель Админа" Margin="416,226,416,386" FontSize="48" FontFamily="Arial Black"></Label>
+        <Button Name="Item_Btn" Content="Управление Товрами" HorizontalAlignment="Center" VerticalAlignment="Top" Height="78" Width="274" Click="Item_Btn_Click" Margin="0,374,0,0"/>
+        <Button Name="User_Btn" Content="Управление Пользователями" HorizontalAlignment="Center" Margin="0,494,0,0" VerticalAlignment="Top" Height="78" Width="274" Click="User_Btn_Click"/>
     </Grid>
 </Page>
