Добавленна страница отчёта,товара

--- a/Pages/Admin Main/ItemControl.xaml
+++ b/Pages/Admin Main/ItemControl.xaml
@@ -30,7 +30,7 @@
             <DataGrid 
                 Name="DgProducts"
                 AutoGenerateColumns="False"
-                RowBackground="LightBlue"
+                RowBackground="White"
                 AlternatingRowBackground="White"
                 HorizontalScrollBarVisibility="Disabled" Height="466" SelectedIndex="2" ScrollViewer.CanContentScroll="True" VerticalScrollBarVisibility="Visible"
                 >
