--- a/Pages/Admin Main/AdmMain.xaml
+++ b/Pages/Admin Main/AdmMain.xaml
@@ -11,6 +11,7 @@
     <Grid>
         <Label Content="Панель Админа" Margin="416,226,416,386" FontSize="48" FontFamily="Arial Black"></Label>
         <Button Name="Item_Btn" Content="Управление Товрами" HorizontalAlignment="Center" VerticalAlignment="Top" Height="78" Width="274" Click="Item_Btn_Click" Margin="0,374,0,0"/>
-        <Button Name="User_Btn" Content="Управление Пользователями" HorizontalAlignment="Center" Margin="0,494,0,0" VerticalAlignment="Top" Height="78" Width="274" Click="User_Btn_Click"/>
+        <Button Name="User_Btn" Content="Управление Пользователями" HorizontalAlignment="Center" Margin="0,494,0,0" VerticalAlignment="Top" Height="78" Width="274" Click="User_Btn_Click" Visibility="Hidden"/>
+        <Button Content="Сформировать отчёт по продажам за месяц" HorizontalAlignment="Left" Margin="132,374,0,0" VerticalAlignment="Top" Height="78" Width="278"/>
     </Grid>
 </Page>
